Add implementation client-user-note/find-all endpoint

--- a/src/main/resources/swagger/employee-service.1.0.0.yaml
+++ b/src/main/resources/swagger/employee-service.1.0.0.yaml
@@ -36,7 +36,7 @@ paths:
       tags:
         - client-user-note
       summary: Finds all note for user.
-      operationId: findAll
+      operationId: findAllMyNotes
       parameters:
         - name: clientUserId
           in: path
