Add implementation client-user-note/update endpoint

--- a/src/main/resources/swagger/employee-service.1.0.0.yaml
+++ b/src/main/resources/swagger/employee-service.1.0.0.yaml
@@ -140,6 +140,9 @@ components:
         clientUserId:
           type: string
           format: uuid
+        noteId:
+          type: string
+          format: uuid
         text:
           type: string
           maxLength: 5000
