--- a/src/main/resources/swagger/employee-service.1.0.0.yaml
+++ b/src/main/resources/swagger/employee-service.1.0.0.yaml
@@ -179,6 +179,7 @@ components:
       properties:
         id:
           type: string
+          format: uuid
           example: a3e41663-159f-4af1-bf0b-0f50e25572e8
         text:
           type: string
